--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,18 +1,12 @@
 #container {
-    position: relative;
-    top: 30px;
-    outline: 2px solid #000;
-    font-size: 0;
-    margin: auto;
+    outline: 3px solid #000;
+    margin: 0 auto;
+    margin-top: 40px;
     height: 960px;
     width: 960px;
-    padding: 0;
-    border: none;
 }
 
 .grid {
-    margin: 0;
-    padding: 0;
     border: none;
     outline: 1px solid #000;
     display: inline-block;
